# knowledge-base-assistant-saqib

./: .env.example  .gitignore  DATABASE_STRUCTURE.md  Dockerfile  README.md  __main.py  docker-compose.yml  pyproject.toml
app/backend/: db.py  schemas.py
app/backend/schemas/: article.py
app/backend/services/: llm_service.py
app/backend/v1/: api.py
app/backend/v1/endpoints/: article.py  category.py
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.css
app/frontend/src/api/: apiClient.js
app/frontend/src/components/: ArticleCard.jsx  ChatBox.jsx  SearchBar.jsx
app/frontend/src/hooks/: useDebounce.js
app/frontend/src/pages/: Home.jsx
config/: database.py  settings.py
data/: __init__.py  seed_data.py
