[project]
name = "Knowledge_base_assistant"
version = "0.1.0"
description = ""
authors = [{ name = "Saqib", email = "rooott@gmail.com" }]
readme = "README.md"
package-mode = false
requires-python = ">=3.13.6"

dependencies = [
  "fastapi",
  "asyncpg",
  "uvicorn",
  "pydantic_settings",
  "openai"
]

[project.optional-dependencies]
dev = [
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

ignore = [
  "E501", # Line too long  (ruff wraps code, but not docstrings)
  "B028", #  No explicit `stacklevel` keyword argument found (for warnings)
  "B019", # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks  TODO: revisit
]
